@@ -1,3 +1,8 @@
+version <unreleased>
+
+Extractors
++ [bilibili] Support new Bangumi URLs (#11845)
+
 version 2017.02.01
 
 Extractors
